--- a/content/sentence_embeddings.ipynb
+++ b/content/sentence_embeddings.ipynb
@@ -5,7 +5,7 @@
    "id": "bcbc1f82",
    "metadata": {},
    "source": [
-    "# Embeddings"
+    "# Sentence embeddings"
    ]
   },
   {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "3f908732",
    "metadata": {},
    "outputs": [
@@ -115,26 +115,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentence: The weather is lovely today.\n",
-      "Most similar: It's very sunny outside!\n",
-      "Cosine similarity: 0.773\n",
-      "----------------------------------------\n",
-      "Sentence: It's very sunny outside!\n",
-      "Most similar: The weather is lovely today.\n",
-      "Cosine similarity: 0.773\n",
-      "----------------------------------------\n",
-      "Sentence: Are you watching the soccer game on TV?\n",
-      "Most similar: I love to play football.\n",
-      "Cosine similarity: 0.577\n",
-      "----------------------------------------\n",
-      "Sentence: I love to play football.\n",
-      "Most similar: Are you watching the soccer game on TV?\n",
-      "Cosine similarity: 0.577\n",
-      "----------------------------------------\n",
-      "Sentence: Are you studying nanoporous materials?\n",
-      "Most similar: Are you watching the soccer game on TV?\n",
-      "Cosine similarity: 0.429\n",
-      "----------------------------------------\n"
+      "Target sentence      : The weather is lovely today.\n",
+      "Most similar sentence: It's very sunny outside!\n",
+      "Cosine similarity    : 0.773\n",
+      "------------------------------------------------------------\n",
+      "Target sentence      : It's very sunny outside!\n",
+      "Most similar sentence: The weather is lovely today.\n",
+      "Cosine similarity    : 0.773\n",
+      "------------------------------------------------------------\n",
+      "Target sentence      : Are you watching the soccer game on TV?\n",
+      "Most similar sentence: I love to play football.\n",
+      "Cosine similarity    : 0.577\n",
+      "------------------------------------------------------------\n",
+      "Target sentence      : I love to play football.\n",
+      "Most similar sentence: Are you watching the soccer game on TV?\n",
+      "Cosine similarity    : 0.577\n",
+      "------------------------------------------------------------\n",
+      "Target sentence      : Are you studying nanoporous materials?\n",
+      "Most similar sentence: Are you watching the soccer game on TV?\n",
+      "Cosine similarity    : 0.429\n",
+      "------------------------------------------------------------\n"
      ]
     }
    ],
@@ -146,10 +146,10 @@
     "    # Exclure la similarité avec soi-même\n",
     "    row = similarity_matrix[i]\n",
     "    most_sim_idx = np.argmax(row)\n",
-    "    print(f\"Sentence: {sentence}\")\n",
-    "    print(f\"Most similar: {sentences[most_sim_idx]}\")\n",
-    "    print(f\"Cosine similarity: {row[most_sim_idx]:.3f}\")\n",
-    "    print(\"-\" * 40)"
+    "    print(f\"Target sentence      : {sentence}\")\n",
+    "    print(f\"Most similar sentence: {sentences[most_sim_idx]}\")\n",
+    "    print(f\"Cosine similarity    : {row[most_sim_idx]:.3f}\")\n",
+    "    print(\"-\" * 60)"
    ]
   }
  ],
