Set background to white in plotly plot

--- a/content/literature_mining.ipynb
+++ b/content/literature_mining.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "id": "2014b6fc",
    "metadata": {},
    "outputs": [
@@ -735,6 +735,7 @@
        "layout": {
         "height": 600,
         "hovermode": "closest",
+        "plot_bgcolor": "rgba(0,0,0,0)",
         "template": {
          "data": {
           "bar": [
@@ -1531,6 +1532,7 @@
     "    \"title\": \"2D UMAP Embeddings\",\n",
     "    \"width\": 800,\n",
     "    \"height\": 600,\n",
+    "    \"plot_bgcolor\": \"rgba(0,0,0,0)\",\n",
     "    \"hovermode\": \"closest\",\n",
     "}\n",
     "\n",
