--- a/content/extract_arxiv.ipynb
+++ b/content/extract_arxiv.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "0ab0e9cd",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "90357eba",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "72429eef",
    "metadata": {},
    "outputs": [],
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "a7dd4f47",
    "metadata": {},
    "outputs": [],
    "source": [
     "def query_arxiv(query: str, max_results: int = 10) -> str:\n",
     "    \"\"\"Query the arXiv API for a given search term.\"\"\"\n",
-    "    print(f\"Querying arXiv for: {query}\")\n",
+    "    print(f\"Querying {max_results} papers from arXiv for: {query}\")\n",
     "    BASE_URL = \"http://export.arxiv.org/api/query\"\n",
     "    params = {\n",
     "        \"search_query\": f\"all:{query}\",\n",
@@ -104,14 +104,14 @@
     "            \"date\": date,\n",
     "            \"title\": title,\n",
     "            \"abstract\": abstract,\n",
-    "            \"query\": query,\n",
+    "            \"category\": query,\n",
     "        })\n",
     "    return entries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "76d4a126",
    "metadata": {},
    "outputs": [
@@ -119,11 +119,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Querying arXiv for: nanoporous materials\n",
-      "Querying arXiv for: many-body\n",
-      "Querying arXiv for: machine learning\n",
-      "Querying arXiv for: quantum computing\n",
-      "Querying arXiv for: biomolecular modeling\n"
+      "Querying 100 papers from arXiv for: nanoporous materials\n",
+      "Querying 100 papers from arXiv for: many-body\n",
+      "Querying 100 papers from arXiv for: machine learning\n",
+      "Querying 100 papers from arXiv for: quantum computing\n",
+      "Querying 100 papers from arXiv for: biomolecular modeling\n"
      ]
     }
    ],
