Finalize literature mining notebook

--- a/content/sentence_embeddings.ipynb
+++ b/content/sentence_embeddings.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "## Load the model\n",
     "\n",
-    "This model is reduced version of the model `nomic-embed-text-v-1.5`.\n",
+    "This model is a reduced version of the model [`nomic-embed-text-v-1.5`](https://huggingface.co/nomic-ai/nomic-embed-text-v1.5). It is a 137-million parameter model that is trained on a large corpus of text to generate embeddings for sentences. Generated embeddings are 768-dimensional vectors that capture the semantic meaning of the input text.\n",
     "\n",
     "Loading the model can take a few minutes, so be patient."
    ]
