--- a/content/literature_mining.ipynb
+++ b/content/literature_mining.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "3d1e7bf4",
    "metadata": {},
    "outputs": [],
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "e303b26f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1366d46f6ad14921a9f12666ee1b6268",
+       "model_id": "c6829514962943bda7c9c20a22bb77aa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "421f60a1",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "cd5ca085",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "cec28955",
    "metadata": {},
    "outputs": [
@@ -376,14 +376,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "0b852da1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39f72e8bcdae43e399456a05d072a08f",
+       "model_id": "dc74a47472854e55a46d38bdbf7a2b6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "0d6c9680",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "41d7564a",
    "metadata": {},
    "outputs": [
@@ -463,10 +463,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pierre/workp/misc/events/2025-05-26_CECAM_summer_school/handson-scientific-literature-embeddings/.venv/lib/python3.12/site-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
-      "  warnings.warn(\n",
-      "/home/pierre/workp/misc/events/2025-05-26_CECAM_summer_school/handson-scientific-literature-embeddings/.venv/lib/python3.12/site-packages/umap/umap_.py:1952: UserWarning: n_jobs value 1 overridden to 1 by setting random_state. Use no seed for parallelism.\n",
-      "  warn(\n"
+      "/home/pierre/workp/misc/events/2025-05-26_CECAM_summer_school/handson-scientific-literature-embeddings/.venv/lib/python3.12/site-packages/sklearn/utils/deprecation.py:151: FutureWarning:\n",
+      "\n",
+      "'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "\n",
+      "/home/pierre/workp/misc/events/2025-05-26_CECAM_summer_school/handson-scientific-literature-embeddings/.venv/lib/python3.12/site-packages/umap/umap_.py:1952: UserWarning:\n",
+      "\n",
+      "n_jobs value 1 overridden to 1 by setting random_state. Use no seed for parallelism.\n",
+      "\n"
      ]
     }
    ],
@@ -491,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "2f8fd39e",
    "metadata": {},
    "outputs": [
@@ -525,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "6c55a703",
    "metadata": {},
    "outputs": [],
@@ -552,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "2014b6fc",
    "metadata": {},
    "outputs": [
@@ -1891,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "112b84ec",
    "metadata": {},
    "outputs": [
@@ -1946,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "0371e189",
    "metadata": {},
    "outputs": [],
@@ -1960,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "e244129e",
    "metadata": {},
    "outputs": [],
@@ -1972,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "aca77c31",
    "metadata": {},
    "outputs": [],
@@ -1991,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "1dcbddb0",
    "metadata": {},
    "outputs": [
@@ -2042,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "99082277",
    "metadata": {},
    "outputs": [
