--- a/content/literature_mining.ipynb
+++ b/content/literature_mining.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "3d1e7bf4",
    "metadata": {},
    "outputs": [],
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "e303b26f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6829514962943bda7c9c20a22bb77aa",
+       "model_id": "488c079c56474e1c918a83fe2cd6f96e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "421f60a1",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "cd5ca085",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "cec28955",
    "metadata": {},
    "outputs": [
@@ -376,14 +376,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "0b852da1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc74a47472854e55a46d38bdbf7a2b6d",
+       "model_id": "dbd2f75204ff4e518f02beaa522e1dc2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "0d6c9680",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "41d7564a",
    "metadata": {},
    "outputs": [
@@ -463,14 +463,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pierre/workp/misc/events/2025-05-26_CECAM_summer_school/handson-scientific-literature-embeddings/.venv/lib/python3.12/site-packages/sklearn/utils/deprecation.py:151: FutureWarning:\n",
-      "\n",
-      "'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
-      "\n",
-      "/home/pierre/workp/misc/events/2025-05-26_CECAM_summer_school/handson-scientific-literature-embeddings/.venv/lib/python3.12/site-packages/umap/umap_.py:1952: UserWarning:\n",
-      "\n",
-      "n_jobs value 1 overridden to 1 by setting random_state. Use no seed for parallelism.\n",
-      "\n"
+      "/home/pierre/workp/misc/events/2025-05-26_CECAM_summer_school/handson-scientific-literature-embeddings/.venv/lib/python3.12/site-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n",
+      "/home/pierre/workp/misc/events/2025-05-26_CECAM_summer_school/handson-scientific-literature-embeddings/.venv/lib/python3.12/site-packages/umap/umap_.py:1952: UserWarning: n_jobs value 1 overridden to 1 by setting random_state. Use no seed for parallelism.\n",
+      "  warn(\n"
      ]
     }
    ],
@@ -495,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "2f8fd39e",
    "metadata": {},
    "outputs": [
@@ -529,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "6c55a703",
    "metadata": {},
    "outputs": [],
@@ -556,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "2014b6fc",
    "metadata": {},
    "outputs": [
@@ -1895,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "112b84ec",
    "metadata": {},
    "outputs": [
@@ -1950,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "0371e189",
    "metadata": {},
    "outputs": [],
@@ -1964,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "e244129e",
    "metadata": {},
    "outputs": [],
@@ -1976,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "aca77c31",
    "metadata": {},
    "outputs": [],
@@ -1995,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "1dcbddb0",
    "metadata": {},
    "outputs": [
@@ -2046,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "99082277",
    "metadata": {},
    "outputs": [
