--- a/content/word_embeddings.ipynb
+++ b/content/word_embeddings.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0c2dc32f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
    "source": [
     "## Load the model\n",
     "\n",
-    "We will use a [GloVe](https://nlp.stanford.edu/projects/glove/) (Global Vectors for Word Representation) model, which is a pre-trained word embedding model developed by researchers at Stanford University. It is designed to capture the meaning of words based on their co-occurrence patterns in large corpora of text.\n",
+    "We will use a [GloVe](https://nlp.stanford.edu/projects/glove/) (Global Vectors for Word Representation) model, which is a pre-trained word embedding model developed by researchers at Stanford University. It is designed to capture the meaning of words based on their co-occurrence patterns in large corpora of text. GloVe is a count-based model only, not based on neural networks (transformers). It is however sufficiently robust to get you started with word embeddings and to understand the basic concepts behind them.\n",
     "\n",
     "More precisely, we will use the `glove-wiki-gigaword-100` model which is a smaller version of the GloVe model trained on Wikipedia and the Gigaword dataset. It contains 100-dimensional word vectors for 400,000 words."
    ]
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "909ddc8c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e1992356",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "f470abcc",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "ee7c0f03",
    "metadata": {},
    "outputs": [
@@ -161,12 +161,12 @@
    "id": "7e682b5c",
    "metadata": {},
    "source": [
-    "Unfortunately, all words are not in the vocabulary (mostly abbreviations):"
+    "Unfortunately, all words are not in the vocabulary. Unknown words are abbreviations and words in other languages than English."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "5e9b6e84",
    "metadata": {},
    "outputs": [
@@ -195,12 +195,12 @@
    "source": [
     "## Find similar words\n",
     "\n",
-    "For a given word, the `similar_by_word()` method returns the most similar words in the vocabulary, together with their similarity score:"
+    "For a given word, the `similar_by_word()` method returns the most similar words in the vocabulary, together with their similarity score. Let's try with the word `simulation`::"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "bd845477",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        " ('simulated', 0.6365459561347961)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,8 +229,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c86d1b7f",
+   "metadata": {},
+   "source": [
+    "The word `simulation` is of course the closest to itself with a score of 1.0. Next closest words are `simulations`, `simulator`, `modeling`...\n",
+    "\n",
+    "We can try with another example:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "cfa68334",
    "metadata": {},
    "outputs": [
@@ -249,7 +259,7 @@
        " ('lessons', 0.681064784526825)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "688a7f76",
    "metadata": {},
    "outputs": [
@@ -289,7 +299,7 @@
        " ('father', 0.6392418742179871)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +314,41 @@
    "id": "284227aa",
    "metadata": {},
    "source": [
-    "Here is the famous equation *king - man + woman $\\simeq$ queen* (a very binary representation of the world...). Note that *king* is the most similar word to the result of the operation. the word *queen* in the most similar word to the result of the operation that **does not appear in the operation itself**."
+    "Here is the famous equation *king - man + woman $\\simeq$ queen* (a very binary representation of the world...). Note that *king* is the most similar word to the result of the operation. the word *queen* in the most similar word to the result of the operation that **does not appear in the operation itself**.\n",
+    "\n",
+    "Try yourself to make the following operations:\n",
+    "\n",
+    "*cucumber - vegetable + fruit*\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9f22c03c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# type your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "864e9c4c",
+   "metadata": {},
+   "source": [
+    "And with:\n",
+    "\n",
+    "*sushi - japan + germany*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dea5b03b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# type your code here"
    ]
   },
   {
@@ -321,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "6d0cf310",
    "metadata": {},
    "outputs": [],
@@ -332,28 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "11b19fb5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "gensim.models.keyedvectors.KeyedVectors"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(word_vectors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "91687552",
    "metadata": {},
    "outputs": [
@@ -402,14 +425,14 @@
    "id": "269aec27",
    "metadata": {},
    "source": [
-    "We observe that the vector between caputal city and country is similar for both pairs of words, which means that the model has learned the relationship between countries and their capital cities.\n",
+    "We observe that the vector between capital city and country is similar for all pairs of words, which means that the model has learned the relationship between countries and their capital cities.\n",
     "\n",
-    "A similar observation can be made for adjectives and their compartaive forms, such as `big` and `bigger`, or `good` and `better`:"
+    "A similar observation can be made for adjectives and their comparative forms, such as `big` and `bigger`, or `good` and `better`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "cbdfa1c7",
    "metadata": {},
    "outputs": [
@@ -442,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "54a23dd8",
    "metadata": {},
    "outputs": [
