--- a/content/sentence_embeddings.ipynb
+++ b/content/sentence_embeddings.ipynb
@@ -20,7 +20,9 @@
    "outputs": [],
    "source": [
     "from fastembed import TextEmbedding\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.preprocessing import normalize"
    ]
   },
   {
@@ -44,7 +46,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "752a12083b374befb15cdca316ca31e7",
+       "model_id": "4f501a65c0904dcfb849e9e53e280279",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The .embed() methods returns a generator that we convert to a list\n",
+    "# The .embed() method returns a generator that we convert to a list\n",
     "# and then take the first element to get the vector.\n",
     "vector = list(model.embed(\"Hello world!\"))[0]  "
    ]
@@ -179,10 +181,10 @@
    "source": [
     "## Compare sentences\n",
     "\n",
-    "We can compare the embeddings of two sentences by computing the cosine similarity between them.\n",
+    "We can compare the embeddings of two sentences by computing the cosine similarity between corresponding vectors.\n",
     "To speed up the computation, we will first normalize the embeddings.\n",
     "\n",
-    "Nomaliszation and cosine similarity can be computed with the `scikit-learn` library or with the `numpy` library.\n",
+    "Nomalization and cosine similarity can be computed with the `scikit-learn` library or with the `numpy` library.\n",
     "\n",
     "### Method 1 with scikit-learn"
    ]
@@ -206,13 +208,11 @@
     }
    ],
    "source": [
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.preprocessing import normalize\n",
     "# Normalize embeddings\n",
     "embeddings_normalized = normalize(embeddings, axis=1)\n",
     "# Compute the cosine similarity between embeddings\n",
-    "similarity = cosine_similarity(embeddings_normalized, embeddings_normalized)\n",
-    "print(similarity)"
+    "similarity_matrix = cosine_similarity(embeddings_normalized, embeddings_normalized)\n",
+    "print(similarity_matrix)"
    ]
   },
   {
@@ -294,9 +294,9 @@
     }
    ],
    "source": [
-    "# Set the diagonal to -inf to exclude self-similarity\n",
+    "# Set the diagonal to -inf to exclude self-similarity.\n",
     "np.fill_diagonal(similarity_matrix, -np.inf)\n",
-    "# Find the most similar sentence for each sentence\n",
+    "# Find the most similar sentence for each sentence.\n",
     "for i, sentence in enumerate(sentences):\n",
     "    row = similarity_matrix[i]\n",
     "    most_sim_idx = np.argmax(row)\n",
