--- a/content/word_embeddings.ipynb
+++ b/content/word_embeddings.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "## Find similar words\n",
     "\n",
-    "For a given word, the `similar_by_word()` method returns the most similar words in the vocabulary, together with their similarity score. Let's try with the word `simulation`::"
+    "For a given word, the `similar_by_word()` method returns the most similar words in the vocabulary, together with their similarity score. Let's try with the word `simulation`:"
    ]
   },
   {
@@ -314,11 +314,11 @@
    "id": "284227aa",
    "metadata": {},
    "source": [
-    "Here is the famous equation *king - man + woman $\\simeq$ queen* (a very binary representation of the world...). Note that *king* is the most similar word to the result of the operation. the word *queen* in the most similar word to the result of the operation that **does not appear in the operation itself**.\n",
+    "Here is the famous equation *king - man + woman ~ queen* (a very binary representation of the world...). Note that *king* is the most similar word to the result of the operation. the word *queen* in the most similar word to the result of the operation that **does not appear in the operation itself**.\n",
     "\n",
     "Try yourself to make the following operations:\n",
     "\n",
-    "*cucumber - vegetable + fruit*\n"
+    "*cucumber - vegetable + fruit*"
    ]
   },
   {
